--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 permalink: /:categories/:title
-title: Waiting15.com
+title: Waiting15'blog
 email: wrt032@outlook.com
-url: http://waiting15.com
+url: https://waiting15.com
 twitter_username: wrt032
 github_username:  waiting15
